Formatting and image cropped_financial_results.png

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -81,33 +81,19 @@
    "id": "3ccf99de",
    "metadata": {},
    "source": [
-    "Comentary for the company was developed from all previous analysis to include an executive summary, business overview, investment theses and analysis of key finanical ratios. Calculated financial data was inserted into the text using the \"in\" python function. "
+    "Comentary for the company was developed from all previous analysis to include an executive summary, business overview, investment theses and analysis of key finanical ratios. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "82294f4f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fpdf import FPDF\n",
     "from html.parser import HTMLParser\n",
     "\n",
-    "# Right column content\n",
-    "PLACE_HOLDER = \"\"\"This is the placeholder text for the right-hand column. \n",
-    "It can include observations, notes, or commentary, and will sit alongside the main content.\"\"\"\n",
     "\n",
     "class PDF(FPDF):\n",
     "    def header(self):\n",
@@ -154,9 +140,6 @@
     "        self.pdf.set_x(self.x)  # stay in column after line wraps\n",
     "\n",
     "\n",
-    "# Load the commentary from file\n",
-    "with open(\"commentary.txt\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    html_content = f.read()\n",
     "\n",
     "# Set up PDF\n",
     "pdf = PDF()\n",
@@ -170,13 +153,75 @@
     "line_height = 6\n",
     "\n",
     "# Starting position after header\n",
-    "y_start = pdf.get_y()\n",
+    "y_start = pdf.get_y()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a255f8",
+   "metadata": {},
+   "source": [
+    "Right hand column content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bb0653d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# --------- RIGHT COLUMN (PLACE_HOLDER text) ---------\n",
+    "\n",
+    "# Right column content\n",
+    "# --------- RIGHT COLUMN (Insert Image) ---------\n",
     "pdf.set_xy(pdf.l_margin + col1_w + 5, y_start)\n",
-    "pdf.set_font('Arial', 'I', 10)\n",
-    "pdf.multi_cell(col2_w - 5, line_height, PLACE_HOLDER)\n",
+    "right_x = pdf.get_x()\n",
+    "right_y = pdf.get_y()\n",
+    "\n",
+    "# Load image into right column\n",
+    "image_width = col2_w - 5  # leave small gap\n",
+    "pdf.image('cropped_financial_results.png', x=right_x, y=right_y, w=image_width)\n",
+    "\n",
+    "# Move cursor after the image\n",
+    "pdf.set_y(right_y + 50)  # Adjust 50 to be the height of your image (approx.)\n",
     "y_right_end = pdf.get_y()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b9f6ff",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9182b7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m pdf.set_y(\u001b[38;5;28mmax\u001b[39m(y_left_end, y_right_end) + \u001b[32m10\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Save it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mpdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mBEN.pdf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1065\u001b[39m, in \u001b[36mFPDF.output\u001b[39m\u001b[34m(self, name, dest)\u001b[39m\n\u001b[32m   1063\u001b[39m \u001b[38;5;66;03m#Finish document if necessary\u001b[39;00m\n\u001b[32m   1064\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mself\u001b[39m.state<\u001b[32m3\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1065\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1066\u001b[39m dest=dest.upper()\n\u001b[32m   1067\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(dest==\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:246\u001b[39m, in \u001b[36mFPDF.close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28mself\u001b[39m._endpage()\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#close document\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_enddoc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1637\u001b[39m, in \u001b[36mFPDF._enddoc\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1635\u001b[39m \u001b[38;5;28mself\u001b[39m._putheader()\n\u001b[32m   1636\u001b[39m \u001b[38;5;28mself\u001b[39m._putpages()\n\u001b[32m-> \u001b[39m\u001b[32m1637\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1638\u001b[39m \u001b[38;5;66;03m#Info\u001b[39;00m\n\u001b[32m   1639\u001b[39m \u001b[38;5;28mself\u001b[39m._newobj()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1585\u001b[39m, in \u001b[36mFPDF._putresources\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1583\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_putresources\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1584\u001b[39m     \u001b[38;5;28mself\u001b[39m._putfonts()\n\u001b[32m-> \u001b[39m\u001b[32m1585\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putimages\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1586\u001b[39m     \u001b[38;5;66;03m#Resource dictionary\u001b[39;00m\n\u001b[32m   1587\u001b[39m     \u001b[38;5;28mself\u001b[39m.offsets[\u001b[32m2\u001b[39m]=\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.buffer)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1515\u001b[39m, in \u001b[36mFPDF._putimages\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1513\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m idx,info \u001b[38;5;129;01min\u001b[39;00m i:\n\u001b[32m   1514\u001b[39m     \u001b[38;5;28mself\u001b[39m._putimage(info)\n\u001b[32m-> \u001b[39m\u001b[32m1515\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m   1516\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info:\n\u001b[32m   1517\u001b[39m         \u001b[38;5;28;01mdel\u001b[39;00m info[\u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mKeyError\u001b[39m: 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the commentary from file\n",
+    "with open(\"commentary.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    html_content = f.read()\n",
     "\n",
     "# --------- LEFT COLUMN (Formatted HTML) ---------\n",
     "pdf.set_xy(pdf.l_margin, y_start)\n",
@@ -188,7 +233,7 @@
     "pdf.set_y(max(y_left_end, y_right_end) + 10)\n",
     "\n",
     "# Save it\n",
-    "pdf.output('BEN.pdf')\n"
+    "pdf.output('BEN.pdf')"
    ]
   },
   {
@@ -201,46 +246,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1a0ad574",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image URL: https://www.bendigobank.com.au/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from urllib.parse import urljoin\n",
-    "import os\n",
     "\n",
     "# Step 1: Define the URL\n",
     "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
     "\n",
     "# Step 2: Fetch the webpage\n",
-    "headers = {'User-Agent': 'Mozilla/5.0'}  # Mimic browser\n",
-    "response = requests.get(url, headers=headers)\n",
+    "response = requests.get(url)\n",
     "response.raise_for_status()\n",
     "\n",
     "# Step 3: Parse the HTML\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "# Step 4: Look for an image containing part of the target src\n",
-    "img_tag = soup.find('img', src=lambda s: s and 'price-table.png' in s)\n",
+    "# Step 4: Find the image with the specific src\n",
+    "target_src = '/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png'\n",
+    "img_tag = soup.find('img', {'src': target_src})\n",
     "\n",
     "# Step 5: If found, build the full image URL and download\n",
     "if img_tag:\n",
-    "    img_url = urljoin(url, img_tag['src'])\n",
-    "    print(f'Downloading image from: {img_url}')\n",
-    "    img_response = requests.get(img_url, headers=headers)\n",
+    "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
+    "    print(f\"Image URL: {img_url}\")\n",
+    "    \n",
+    "    # Optional: Download the image\n",
+    "    img_response = requests.get(img_url)\n",
     "    img_response.raise_for_status()\n",
-    "    \n",
-    "    # Get current directory of script\n",
-    "    script_dir = os.path.dirname(os.path.abspath(__file__))\n",
-    "    save_path = os.path.join(script_dir, 'financial_results.png')\n",
-    "    \n",
-    "    with open(save_path, 'wb') as f:\n",
+    "    with open('data_table.png', 'wb') as f:\n",
     "        f.write(img_response.content)\n",
-    "    print(f\"Download complete. Saved to: {save_path}\")\n",
-    "else:\n",
-    "    print(\"Image not found.\")"
+    "\n",
+    "from PIL import Image  # <-- add this!\n",
+    "\n",
+    "# Right column: image instead of placeholder text\n",
+    "ORIGINAL_IMAGE = 'financial_results.png'\n",
+    "CROPPED_IMAGE = 'cropped_financial_results.png'  # temp file\n",
+    "\n",
+    "# Function to crop the left half of an image\n",
+    "def crop_left_half(input_path, output_path):\n",
+    "    with Image.open(input_path) as img:\n",
+    "        width, height = img.size\n",
+    "        # Crop (left, top, right, bottom)\n",
+    "        left_half = img.crop((0, 0, width // 2, height))\n",
+    "        left_half.save(output_path)\n",
+    "\n",
+    "# Crop the image before doing anything else\n",
+    "crop_left_half(ORIGINAL_IMAGE, CROPPED_IMAGE)"
    ]
   },
   {
@@ -302,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
