Fixed valuation model for BENDIGO.xlsx

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [],
@@ -175,13 +175,23 @@
     "\n",
     "# Right column content\n",
     "# --------- RIGHT COLUMN (Insert Image) ---------\n",
+    "x_right = pdf.l_margin + col1_w + 5  # Start of right column\n",
+    "y_right_start = y_start\n",
+    "col2_actual_width = col2_w - 5  # Narrow a little for margin space\n",
+    "\n",
+    "# Set light blue color for the background\n",
+    "pdf.set_fill_color(230, 240, 255)  # Very light blue\n",
+    "\n",
+    "# Draw the rectangle\n",
+    "pdf.rect(x_right, y_right_start, col2_actual_width, 350, style='F')\n",
     "pdf.set_xy(pdf.l_margin + col1_w + 5, y_start)\n",
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
     "\n",
+    "#pdf.image('cropped_financial_results.png', x=right_x, y=right_y, w=image_width)\n",
+    "\n",
     "# Load image into right column\n",
     "image_width = col2_w - 5  # leave small gap\n",
-    "pdf.image('cropped_financial_results.png', x=right_x, y=right_y, w=image_width)\n",
     "\n",
     "# Move cursor after the image\n",
     "pdf.set_y(right_y + 50)  # Adjust 50 to be the height of your image (approx.)\n",
@@ -197,25 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m pdf.set_y(\u001b[38;5;28mmax\u001b[39m(y_left_end, y_right_end) + \u001b[32m10\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Save it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mpdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mBEN.pdf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1065\u001b[39m, in \u001b[36mFPDF.output\u001b[39m\u001b[34m(self, name, dest)\u001b[39m\n\u001b[32m   1063\u001b[39m \u001b[38;5;66;03m#Finish document if necessary\u001b[39;00m\n\u001b[32m   1064\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mself\u001b[39m.state<\u001b[32m3\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1065\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1066\u001b[39m dest=dest.upper()\n\u001b[32m   1067\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(dest==\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:246\u001b[39m, in \u001b[36mFPDF.close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28mself\u001b[39m._endpage()\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#close document\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_enddoc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1637\u001b[39m, in \u001b[36mFPDF._enddoc\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1635\u001b[39m \u001b[38;5;28mself\u001b[39m._putheader()\n\u001b[32m   1636\u001b[39m \u001b[38;5;28mself\u001b[39m._putpages()\n\u001b[32m-> \u001b[39m\u001b[32m1637\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1638\u001b[39m \u001b[38;5;66;03m#Info\u001b[39;00m\n\u001b[32m   1639\u001b[39m \u001b[38;5;28mself\u001b[39m._newobj()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1585\u001b[39m, in \u001b[36mFPDF._putresources\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1583\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_putresources\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1584\u001b[39m     \u001b[38;5;28mself\u001b[39m._putfonts()\n\u001b[32m-> \u001b[39m\u001b[32m1585\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putimages\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1586\u001b[39m     \u001b[38;5;66;03m#Resource dictionary\u001b[39;00m\n\u001b[32m   1587\u001b[39m     \u001b[38;5;28mself\u001b[39m.offsets[\u001b[32m2\u001b[39m]=\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.buffer)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1515\u001b[39m, in \u001b[36mFPDF._putimages\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1513\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m idx,info \u001b[38;5;129;01min\u001b[39;00m i:\n\u001b[32m   1514\u001b[39m     \u001b[38;5;28mself\u001b[39m._putimage(info)\n\u001b[32m-> \u001b[39m\u001b[32m1515\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m   1516\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info:\n\u001b[32m   1517\u001b[39m         \u001b[38;5;28;01mdel\u001b[39;00m info[\u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m]\n",
-      "\u001b[31mKeyError\u001b[39m: 'data'"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "1a0ad574",
    "metadata": {},
    "outputs": [
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
