Made some changes to the image scraper so that errors are less frequent

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -165,46 +165,48 @@
    "execution_count": null,
    "id": "1a0ad574",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image URL: https://www.bendigobank.com.au/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from urllib.parse import urljoin\n",
+    "import os\n",
     "\n",
     "# Step 1: Define the URL\n",
     "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
     "\n",
     "# Step 2: Fetch the webpage\n",
-    "response = requests.get(url)\n",
+    "headers = {'User-Agent': 'Mozilla/5.0'}  # Mimic browser\n",
+    "response = requests.get(url, headers=headers)\n",
     "response.raise_for_status()\n",
     "\n",
     "# Step 3: Parse the HTML\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "# Step 4: Find the image with the specific src\n",
-    "target_src = '/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png'\n",
-    "img_tag = soup.find('img', {'src': target_src})\n",
+    "# Step 4: Look for an image containing part of the target src\n",
+    "img_tag = soup.find('img', src=lambda s: s and 'price-table.png' in s)\n",
     "\n",
     "# Step 5: If found, build the full image URL and download\n",
     "if img_tag:\n",
-    "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
-    "    img_response = requests.get(img_url)\n",
+    "    img_url = urljoin(url, img_tag['src'])\n",
+    "    print(f'Downloading image from: {img_url}')\n",
+    "    img_response = requests.get(img_url, headers=headers)\n",
     "    img_response.raise_for_status()\n",
-    "    with open('financial_results.png', 'wb') as f:\n",
-    "        f.write(img_response.content)\n"
+    "    \n",
+    "    # Get current directory of script\n",
+    "    script_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "    save_path = os.path.join(script_dir, 'financial_results.png')\n",
+    "    \n",
+    "    with open(save_path, 'wb') as f:\n",
+    "        f.write(img_response.content)\n",
+    "    print(f\"Download complete. Saved to: {save_path}\")\n",
+    "else:\n",
+    "    print(\"Image not found.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
@@ -261,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
