--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -86,14 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from fpdf import FPDF\n",
     "from html.parser import HTMLParser\n",
-    "\n",
+    "import pandas as pd\n",
+    "import openpyxl\n",
     "\n",
     "class PDF(FPDF):\n",
     "    def header(self):\n",
@@ -169,7 +170,15 @@
    "execution_count": null,
    "id": "bb0653d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Valuation Date', '[Date]', '2025-04-25 00:00:00'], ['Share Price', '[$]', '10.88'], ['DilutedShares Outstanding', '[m]', '567'], ['Cost of Equity', '[%]', '7.9%'], ['Terminal Growth Rate', '[%]', '2.1%']]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -195,6 +204,54 @@
     "\n",
     "# Move cursor after the image\n",
     "pdf.set_y(right_y + 50)  # Adjust 50 to be the height of your image (approx.)\n",
+    "\n",
+    "# Load the workbook\n",
+    "wb = load_workbook('BENDIGO.xlsx', data_only=True)\n",
+    "ws = wb.active  # or wb['YourSheetName']\n",
+    "\n",
+    "# Now manually read D9:J19 preserving formatting\n",
+    "data = []\n",
+    "for row in ws.iter_rows(min_row=9, max_row=13, min_col=4, max_col=6):\n",
+    "    row_data = []\n",
+    "    for cell in row:\n",
+    "        value = cell.value\n",
+    "        number_format = cell.number_format\n",
+    "\n",
+    "        # Apply number formatting manually\n",
+    "        if value is None:\n",
+    "            display_value = ''\n",
+    "        elif '0%' in number_format or number_format.endswith('%'):\n",
+    "            # Format as percentage\n",
+    "            display_value = f\"{value * 100:.1f}%\"\n",
+    "        elif '$' in number_format or 'Accounting' in number_format:\n",
+    "            display_value = f\"${value:,.2f}\"\n",
+    "        elif '#,##0' in number_format or ',' in number_format:\n",
+    "            display_value = f\"{value:,.0f}\"\n",
+    "        else:\n",
+    "            display_value = str(value)\n",
+    "\n",
+    "        row_data.append(display_value)\n",
+    "    data.append(row_data)\n",
+    "\n",
+    "print(data)\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n",
+    "\n",
+    "pdf.set_xy(pdf.l_margin + col1_w + 5, y_start)\n",
+    "right_x = pdf.get_x()\n",
+    "right_y = pdf.get_y()\n",
+    "\n",
+    "pdf.set_font('Arial', '', 8)\n",
+    "\n",
+    "col_width = (col2_w - 5) / df.shape[1]  # number of columns\n",
+    "row_height = 5\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    for j in range(len(df.columns)):\n",
+    "        value = str(df.iloc[i, j])\n",
+    "        pdf.cell(col_width, row_height, value, border=1, align='C')\n",
+    "    pdf.ln(row_height)\n",
+    "    pdf.set_x(right_x)\n",
     "y_right_end = pdf.get_y()\n",
     "\n"
    ]
@@ -207,19 +264,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m pdf.set_y(\u001b[38;5;28mmax\u001b[39m(y_left_end, y_right_end) + \u001b[32m10\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Save it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mpdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mBEN.pdf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1065\u001b[39m, in \u001b[36mFPDF.output\u001b[39m\u001b[34m(self, name, dest)\u001b[39m\n\u001b[32m   1063\u001b[39m \u001b[38;5;66;03m#Finish document if necessary\u001b[39;00m\n\u001b[32m   1064\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;28mself\u001b[39m.state<\u001b[32m3\u001b[39m):\n\u001b[32m-> \u001b[39m\u001b[32m1065\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1066\u001b[39m dest=dest.upper()\n\u001b[32m   1067\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(dest==\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:246\u001b[39m, in \u001b[36mFPDF.close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    244\u001b[39m \u001b[38;5;28mself\u001b[39m._endpage()\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#close document\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m246\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_enddoc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1637\u001b[39m, in \u001b[36mFPDF._enddoc\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1635\u001b[39m \u001b[38;5;28mself\u001b[39m._putheader()\n\u001b[32m   1636\u001b[39m \u001b[38;5;28mself\u001b[39m._putpages()\n\u001b[32m-> \u001b[39m\u001b[32m1637\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1638\u001b[39m \u001b[38;5;66;03m#Info\u001b[39;00m\n\u001b[32m   1639\u001b[39m \u001b[38;5;28mself\u001b[39m._newobj()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1585\u001b[39m, in \u001b[36mFPDF._putresources\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1583\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_putresources\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1584\u001b[39m     \u001b[38;5;28mself\u001b[39m._putfonts()\n\u001b[32m-> \u001b[39m\u001b[32m1585\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_putimages\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1586\u001b[39m     \u001b[38;5;66;03m#Resource dictionary\u001b[39;00m\n\u001b[32m   1587\u001b[39m     \u001b[38;5;28mself\u001b[39m.offsets[\u001b[32m2\u001b[39m]=\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.buffer)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:1515\u001b[39m, in \u001b[36mFPDF._putimages\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1513\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m idx,info \u001b[38;5;129;01min\u001b[39;00m i:\n\u001b[32m   1514\u001b[39m     \u001b[38;5;28mself\u001b[39m._putimage(info)\n\u001b[32m-> \u001b[39m\u001b[32m1515\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m   1516\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m info:\n\u001b[32m   1517\u001b[39m         \u001b[38;5;28;01mdel\u001b[39;00m info[\u001b[33m'\u001b[39m\u001b[33msmask\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mKeyError\u001b[39m: 'data'"
+     ]
     }
    ],
    "source": [
@@ -250,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "1a0ad574",
    "metadata": {},
    "outputs": [
@@ -312,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
