--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 329,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -107,9 +107,8 @@
     "        self.set_font('Arial', 'I', 8)\n",
     "        self.cell(0, 8, f'Page {self.page_no()}', align='C')\n",
     "\n",
-    "\n",
     "class ColumnHTMLParser(HTMLParser):\n",
-    "    def __init__(self, pdf, x, y, col_width, line_height=6):\n",
+    "    def __init__(self, pdf, x, y, col_width, line_height=5):\n",
     "        super().__init__()\n",
     "        self.pdf = pdf\n",
     "        self.x = x\n",
@@ -122,23 +121,25 @@
     "    def handle_starttag(self, tag, attrs):\n",
     "        self.current_tag = tag\n",
     "        if tag == 'h1':\n",
-    "            self.pdf.set_font('Arial', 'B', 16)\n",
+    "            self.pdf.set_font('Arial', 'B', 14)\n",
     "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "        elif tag == 'h2':\n",
-    "            self.pdf.set_font('Arial', 'B', 13)\n",
+    "            self.pdf.set_font('Arial', 'B', 12)\n",
     "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "        elif tag == 'p':\n",
-    "            self.pdf.set_font('Arial', '', 11)\n",
+    "            self.pdf.set_font('Arial', '', 10)\n",
     "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "\n",
     "    def handle_endtag(self, tag):\n",
     "        if tag == 'p':\n",
-    "            self.pdf.ln(2)\n",
+    "            self.pdf.ln(4)  # very small space after paragraph\n",
+    "        # ❌ No extra line break after headings\n",
     "        self.current_tag = None\n",
     "\n",
     "    def handle_data(self, data):\n",
-    "        self.pdf.multi_cell(self.col_width, self.line_height, data)\n",
-    "        self.pdf.set_x(self.x)  # stay in column after line wraps\n",
+    "        if self.current_tag:\n",
+    "            self.pdf.multi_cell(self.col_width, self.line_height, data)\n",
+    "            self.pdf.set_x(self.x)\n",
     "\n",
     "\n",
     "\n",
@@ -151,7 +152,7 @@
     "total_width = pdf.w - pdf.l_margin - pdf.r_margin\n",
     "col1_w = total_width * 2 / 3\n",
     "col2_w = total_width * 1 / 3\n",
-    "line_height = 6\n",
+    "line_height = 5\n",
     "\n",
     "# Starting position after header\n",
     "y_start = pdf.get_y()\n"
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -238,7 +239,7 @@
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
     "\n",
-    "pdf.set_font('Arial', '', 4)\n",
+    "pdf.set_font('Arial', '', 5)\n",
     "\n",
     "col_width = (col2_w - 5) / df.shape[1]  # number of columns\n",
     "row_height = 5\n",
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 331,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -322,7 +323,7 @@
        "''"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "id": "1a0ad574",
    "metadata": {},
    "outputs": [
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 333,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
