--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -2,6 +2,73 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9fb4ac84",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e3f185b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image URL: https://www.bendigobank.com.au/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from PIL import Image\n",
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "# Step 1: URL is defined\n",
+    "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
+    "\n",
+    "# Step 2: Fetch the webpage\n",
+    "response = requests.get(url)\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "# Step 3: Parse the HTML\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Step 4: Find the image with the specific src\n",
+    "target_src = '/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png'\n",
+    "img_tag = soup.find('img', {'src': target_src})\n",
+    "\n",
+    "# Step 5: If found, build the full image URL and download\n",
+    "if img_tag:\n",
+    "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
+    "    print(f\"Image URL: {img_url}\")\n",
+    "    \n",
+    "    # Optional: Download the image\n",
+    "    img_response = requests.get(img_url)\n",
+    "    img_response.raise_for_status()\n",
+    "    with open('data_table.png', 'wb') as f:\n",
+    "        f.write(img_response.content)\n",
+    "\n",
+    "# Right column: image instead of placeholder text\n",
+    "ORIGINAL_IMAGE = 'financial_results.png'\n",
+    "CROPPED_IMAGE = 'cropped_financial_results.png'  # temp file\n",
+    "\n",
+    "# Function to crop the left half of an image\n",
+    "def crop_left_half(input_path, output_path):\n",
+    "    with Image.open(input_path) as img:\n",
+    "        width, height = img.size\n",
+    "        # Crop (left, top, right, bottom)\n",
+    "        left_half = img.crop((0, 0, width // 2 - 5, height))\n",
+    "        left_half.save(output_path)\n",
+    "\n",
+    "# Crop the image before doing anything else\n",
+    "crop_left_half(ORIGINAL_IMAGE, CROPPED_IMAGE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b37e9d2",
    "metadata": {},
    "source": [
@@ -9,84 +76,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "796ae27d",
-   "metadata": {},
-   "source": [
-    "Runs instance of DDM.py to create model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0978850d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0b536a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def net_interest_margin(net_interest, earning_assets):\n",
-    "    nim = net_interest / earning_assets\n",
-    "    return nim\n",
-    "def calculate_dividend_yield(dividend, last_price):\n",
-    "    if last_price == 0:\n",
-    "        return 0\n",
-    "    return dividend / last_price\n",
-    "def calculate_pe_ratio(last_price, eps):\n",
-    "    if eps == 0:\n",
-    "        return 0\n",
-    "    return last_price / eps\n",
-    "def calculate_eps(earnings, shares_outstanding):\n",
-    "    if shares_outstanding == 0:\n",
-    "        return 0\n",
-    "    return earnings / shares_outstanding\n",
-    "def calculate_roa(earnings, total_assets):\n",
-    "    if total_assets == 0:\n",
-    "        return 0\n",
-    "    return earnings / total_assets\n",
-    "def calculate_pe_ratio(last_price, eps):\n",
-    "    if eps == 0:\n",
-    "        return 0\n",
-    "    return last_price / eps\n",
-    "def calculate_eps(earnings, shares_outstanding):\n",
-    "    if shares_outstanding == 0:\n",
-    "        return 0\n",
-    "    return earnings / shares_outstanding"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "453e2339",
-   "metadata": {},
-   "source": [
-    "To provide "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ed61243",
-   "metadata": {},
-   "source": [
-    "Specific "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ccf99de",
-   "metadata": {},
-   "source": [
-    "Comentary for the company was developed from all previous analysis to include an executive summary, business overview, investment theses and analysis of key finanical ratios. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 344,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 346,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -323,7 +314,7 @@
        "''"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": null,
    "id": "1a0ad574",
    "metadata": {},
    "outputs": [
@@ -368,57 +359,11 @@
      ]
     }
    ],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from urllib.parse import urljoin\n",
-    "\n",
-    "# Step 1: Define the URL\n",
-    "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
-    "\n",
-    "# Step 2: Fetch the webpage\n",
-    "response = requests.get(url)\n",
-    "response.raise_for_status()\n",
-    "\n",
-    "# Step 3: Parse the HTML\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "# Step 4: Find the image with the specific src\n",
-    "target_src = '/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png'\n",
-    "img_tag = soup.find('img', {'src': target_src})\n",
-    "\n",
-    "# Step 5: If found, build the full image URL and download\n",
-    "if img_tag:\n",
-    "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
-    "    print(f\"Image URL: {img_url}\")\n",
-    "    \n",
-    "    # Optional: Download the image\n",
-    "    img_response = requests.get(img_url)\n",
-    "    img_response.raise_for_status()\n",
-    "    with open('data_table.png', 'wb') as f:\n",
-    "        f.write(img_response.content)\n",
-    "\n",
-    "from PIL import Image  # <-- add this!\n",
-    "\n",
-    "# Right column: image instead of placeholder text\n",
-    "ORIGINAL_IMAGE = 'financial_results.png'\n",
-    "CROPPED_IMAGE = 'cropped_financial_results.png'  # temp file\n",
-    "\n",
-    "# Function to crop the left half of an image\n",
-    "def crop_left_half(input_path, output_path):\n",
-    "    with Image.open(input_path) as img:\n",
-    "        width, height = img.size\n",
-    "        # Crop (left, top, right, bottom)\n",
-    "        left_half = img.crop((0, 0, width // 2 - 5, height))\n",
-    "        left_half.save(output_path)\n",
-    "\n",
-    "# Crop the image before doing anything else\n",
-    "crop_left_half(ORIGINAL_IMAGE, CROPPED_IMAGE)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 348,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
