--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 459,
    "id": "6e3f185b",
    "metadata": {},
    "outputs": [
@@ -74,12 +74,12 @@
    "id": "8b37e9d2",
    "metadata": {},
    "source": [
-    "To aid in generating an equity research report for Bendigo and Adelaide bank, first a fundimental analysis is performed by defining relevent functions to calculate key profitability, liquidity and efficiency and valuation ratios. "
+    "To aid in generating an equity research report for Bendigo and Adelaide bank, first a fundamental analysis is performed by defining relevent functions to calculate key profitability, liquidity and efficiency and valuation ratios. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 460,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 461,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -169,19 +169,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Valuation Date', '[Date]', datetime.datetime(2025, 4, 25, 0, 0)], ['Last Share Price', '[$]', 10.88], ['Intrinsic Value', '[$]', 13.89], ['Diluted Shares Outstanding', '[m]', '567'], ['Cost of Equity', '[%]', '7.9%'], ['Terminal Growth Rate', '[%]', '2.1%']]\n",
-      "                            0       1                    2\n",
-      "0              Valuation Date  [Date]  2025-04-25 00:00:00\n",
-      "1            Last Share Price     [$]                10.88\n",
-      "2             Intrinsic Value     [$]                13.89\n",
-      "3  Diluted Shares Outstanding     [m]                  567\n",
-      "4              Cost of Equity     [%]                 7.9%\n",
-      "5        Terminal Growth Rate     [%]                 2.1%\n",
+      "[['Valuation Date', '2025-04-25 00:00:00'], ['Share Price', '$10.88'], ['Diluted Shares Outstanding', '567m'], ['Cost of Equity', '8.69%'], ['Terminal Growth Rate', '2.50%'], ['Share Price', '$10.88'], ['Intrinsic Value', '$10.73'], ['Discount/(Premium)', '-1.39%']]\n",
+      "                            0                    1\n",
+      "0              Valuation Date  2025-04-25 00:00:00\n",
+      "1                 Share Price               $10.88\n",
+      "2  Diluted Shares Outstanding                 567m\n",
+      "3              Cost of Equity                8.69%\n",
+      "4        Terminal Growth Rate                2.50%\n",
+      "5                 Share Price               $10.88\n",
+      "6             Intrinsic Value               $10.73\n",
+      "7          Discount/(Premium)               -1.39%\n",
       "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.58), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
    "source": [
+    "from openpyxl import load_workbook\n",
     "# Right column content\n",
     "# --------- RIGHT COLUMN (Insert Image) ---------\n",
     "x_right = pdf.l_margin + col1_w + 5  # Start of right column\n",
@@ -201,44 +204,55 @@
     "wb = load_workbook('BENDIGO.xlsx', data_only=True)\n",
     "ws = wb.active  # or wb['YourSheetName']\n",
     "\n",
-    "# Now manually read D9:J19 preserving formatting\n",
+    "# Now manually read D9:J13 and D17:J19 preserving formatting\n",
     "data = []\n",
-    "for row in ws.iter_rows(min_row=11, max_row=16, min_col=4, max_col=6):\n",
-    "    row_data = []\n",
-    "    for cell in row:\n",
-    "        value = cell.value\n",
-    "        number_format = cell.number_format\n",
-    "        # Apply number formatting manually\n",
-    "        if value is None:\n",
-    "            display_value = ''\n",
-    "        elif '0%' in number_format or number_format.endswith('%'):\n",
-    "            # Format as percentage\n",
-    "            display_value = f\"{value * 100:.1f}%\"\n",
-    "        elif '$' in number_format or 'Accounting' in number_format:\n",
-    "            display_value = f\"${value:,.2f}\"\n",
-    "        elif '#,##0' in number_format or ',' in number_format:\n",
-    "            display_value = f\"{value:,.0f}\"\n",
-    "        else:\n",
-    "            display_value = value\n",
+    "rows_to_extract = list(range(9, 14)) + list(range(17, 20))\n",
     "\n",
-    "        row_data.append(display_value)\n",
-    "    data.append(row_data)\n",
+    "for i in rows_to_extract:\n",
+    "    label = str(ws.cell(row=i, column=4).value or '').strip()  # Column D\n",
+    "    unit = str(ws.cell(row=i, column=5).value or '').strip()   # Column E\n",
+    "    value_cell = ws.cell(row=i, column=10)  # Column J\n",
+    "    value = value_cell.value\n",
+    "    fmt = value_cell.number_format\n",
+    "\n",
+    "    # Format value and include unit in the value itself\n",
+    "    if value is None:\n",
+    "        display = ''\n",
+    "    elif isinstance(value, (int, float)):\n",
+    "        if '%' in fmt or fmt.endswith('%') or unit == '[%]':\n",
+    "            display = f\"{value * 100:.2f}%\"\n",
+    "        elif '$' in fmt or 'Accounting' in fmt or unit == '[$]':\n",
+    "            display = f\"${value:,.2f}\"\n",
+    "        elif unit == '[m]':\n",
+    "            display = f\"{value:,.0f}m\"\n",
+    "        elif ',' in fmt or '#,##0' in fmt:\n",
+    "            display = f\"{value:,.0f}\"\n",
+    "        elif 'Intrinsic' in label or 'Share Price' in label:\n",
+    "            display = f\"${value:.2f}\"\n",
+    "        elif 'Discount' in label:\n",
+    "            display = f\"{value * 100:.2f}%\"\n",
+    "        else:\n",
+    "            display = f\"{value:.2f}\"\n",
+    "    else:\n",
+    "        display = str(value)\n",
+    "\n",
+    "    data.append([label, display])\n",
     "\n",
     "print(data)\n",
     "df = pd.DataFrame(data)\n",
     "print(df)\n",
     "\n",
-    "pdf.set_xy(pdf.l_margin + col1_w + 5, y_start)\n",
+    "pdf.set_xy(pdf.l_margin + col1_w + 10, y_start)\n",
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
     "\n",
     "pdf.set_font('Arial', '', 5)\n",
     "\n",
-    "col_width = (col2_w - 5) / df.shape[1]  # number of columns\n",
+    "col_width = (col2_w - 15 ) / df.shape[1]  # number of columns\n",
     "row_height = 5\n",
     "pdf.set_y(right_y + 10)\n",
     "\n",
-    "df.columns = [\"Metric\", \"Unit\", \"Value\"]\n",
+    "df.columns = [\"Metric\", \"Value\"]\n",
     "pdf.set_x(right_x)\n",
     "# --------- Draw HEADER row ----------\n",
     "pdf.set_font('Arial', 'B', 4)  # Bold font\n",
@@ -260,13 +274,13 @@
     "right_y = pdf.get_y()\n",
     "\n",
     "# Load image into right column\n",
-    "image_width = col2_w - 10  # leave small gap\n",
+    "image_width = col2_w - 20  # leave small gap\n",
     "\n",
     "# Move cursor after the image\n",
-    "pdf.set_y(right_y + 50)  # Adjust 50 to be the height of your image (approx.)\n",
-    "pdf.image('cropped_financial_results.png', x=right_x+2.5, y=right_y+2.5, w=image_width)\n",
+    "pdf.set_y(right_y - 30)  # Adjust 50 to be the height of your image (approx.)\n",
+    "pdf.image('cropped_financial_results.png', x=right_x+2.5, y=right_y+5.5, w=image_width)\n",
     "\n",
-    "pdf.set_y(right_y + 35)  # Adjust 50 to be the height of your image (approx.)\n",
+    "pdf.set_y(right_y+35)  # Adjust 50 to be the height of your image (approx.)\n",
     "pdf.set_x(right_x+10)\n",
     "right_x = pdf.get_x()\n",
     "right_y = pdf.get_y()\n",
@@ -275,27 +289,52 @@
     "from Ratios_and_Metrics import financial_metrics_bendigo\n",
     "\n",
     "df = financial_metrics_bendigo()\n",
+    "\n",
+    "# Adjusted total table width\n",
+    "table_width = col2_w - 15\n",
+    "col_width = table_width / df.shape[1]\n",
+    "\n",
+    "# Starting X position with 5 padding on each side\n",
+    "table_start_x = right_x - 10\n",
+    "pdf.set_x(table_start_x)\n",
+    "\n",
     "# --------- Draw HEADER row ----------\n",
-    "pdf.set_font('Arial', 'B', 4)  # Bold font\n",
+    "pdf.set_font('Arial', 'B', 4)\n",
     "for col_name in df.columns:\n",
     "    pdf.cell(col_width, row_height, str(col_name), border='B', align='C')\n",
     "pdf.ln(row_height)\n",
-    "pdf.set_x(right_x)\n",
-    "\n",
     "\n",
     "# --------- Draw BODY rows ----------\n",
-    "pdf.set_font('Arial', '', 4)  # Back to normal font\n",
+    "pdf.set_font('Arial', '', 4)\n",
     "for i in range(len(df)):\n",
+    "    pdf.set_x(table_start_x)  # Reset to start of row each line\n",
     "    for j in range(len(df.columns)):\n",
     "        value = str(df.iloc[i, j])\n",
     "        pdf.cell(col_width, row_height, value, border='B', align='C')\n",
     "    pdf.ln(row_height)\n",
-    "    pdf.set_x(right_x)\n",
     "\n",
-    "right_x = pdf.get_x()\n",
-    "right_y = pdf.get_y()\n",
+    "# --- Group member list: positioned relative to table, move as a block ---\n",
+    "pdf.set_font('Arial', 'I', 6)\n",
     "\n",
-    "\n"
+    "# Set these two values to control the block position\n",
+    "group_top_y = pdf.get_y() + 100      # vertical position (↓ = larger number)\n",
+    "group_left_x = table_start_x + 12   # horizontal position (→ = larger number)\n",
+    "\n",
+    "# Move to starting position\n",
+    "pdf.set_xy(group_left_x, group_top_y)\n",
+    "\n",
+    "# Group members\n",
+    "group_members = [\n",
+    "    \"Alice Zhang - 45678912\",\n",
+    "    \"Miles Mizutani - 43127890\",\n",
+    "    \"Jason Lee - 43216789\",\n",
+    "    \"Emily Tran - 42896543\"\n",
+    "]\n",
+    "\n",
+    "line_height = 4\n",
+    "for member in group_members:\n",
+    "    pdf.set_x(group_left_x)\n",
+    "    pdf.cell(0, line_height, member, ln=True)"
    ]
   },
   {
@@ -306,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 462,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -316,7 +355,7 @@
        "''"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,6 +370,7 @@
     "html_parser = ColumnHTMLParser(pdf, x=pdf.l_margin, y=y_start, col_width=col1_w, line_height=line_height)\n",
     "html_parser.feed(html_content)\n",
     "y_left_end = pdf.get_y()\n",
+    "y_right_end = pdf.get_y()\n",
     "\n",
     "# Ensure bottom spacing is correct\n",
     "pdf.set_y(max(y_left_end, y_right_end) + 5)\n",
@@ -347,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 463,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
@@ -390,7 +430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -404,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
