Added recommendation to header, fixed tables and commentary
commentary

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 355,
    "id": "6e3f185b",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": null,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [],
@@ -93,6 +93,25 @@
     "    def header(self):\n",
     "        banner_width = self.w - self.l_margin - self.r_margin\n",
     "        self.image('test.png', x=self.l_margin, y=0, w=banner_width, h=20)\n",
+    "        right_margin_x = self.w - self.r_margin\n",
+    "        x_text_start = right_margin_x - 60  # Adjust as needed\n",
+    "        y_text_start = 4  # Top padding from banner top\n",
+    "        self.set_y(25)\n",
+    "        self.set_xy(x_text_start, y_text_start)\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.set_text_color(255,255,255)  # White\n",
+    "        self.cell(self.get_string_width(\"Recommendation: \"), 7, \"Recommendation: \", ln=0)\n",
+    "\n",
+    "        self.set_text_color(255, 204, 0)  # Yellow\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.cell(0, 7, \"HOLD\", ln=1)\n",
+    "\n",
+    "        # Line 2: \"Downside: -1.39%\"\n",
+    "        self.set_text_color(255,255,255)\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.set_x(x_text_start)\n",
+    "        self.cell(0, 6, \"Downside: -1.39%\", ln=1)\n",
+    "        self.set_text_color(0)\n",
     "        self.set_y(25)\n",
     "\n",
     "    def footer(self):\n",
@@ -125,8 +144,9 @@
     "\n",
     "    def handle_endtag(self, tag):\n",
     "        if tag == 'p':\n",
-    "            self.pdf.ln(4)  # very small space after paragraph\n",
-    "        # ❌ No extra line break after headings\n",
+    "            self.pdf.ln(4)\n",
+    "        if self.current_tag == 'h1':\n",
+    "            self.pdf.ln(2)\n",
     "        self.current_tag = None\n",
     "\n",
     "    def handle_data(self, data):\n",
@@ -161,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 416,
    "id": "bb0653d5",
    "metadata": {},
    "outputs": [
@@ -179,7 +199,7 @@
       "5                 Share Price               $10.88\n",
       "6             Intrinsic Value               $10.73\n",
       "7          Discount/(Premium)               -1.39%\n",
-      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.58), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
+      "{'Dividend Yield (%)': np.float64(2.69), 'Earnings Per Share (EPS)': 0.96, 'Price to Earnings (P/E)': np.float64(11.61), 'Return on Assets (ROA %)': np.float64(0.55), 'Return on Equity (ROE %)': 7.68, 'Profit Margin (%)': 27.03, 'Operating Margin (%)': 33.38, 'Price to Book (P/B)': np.float64(0.89), 'Dividend Payout Ratio (%)': 31.19}\n"
      ]
     }
    ],
@@ -248,21 +268,22 @@
     "\n",
     "pdf.set_font('Arial', '', 5)\n",
     "\n",
-    "col_width = (col2_w - 15 ) / df.shape[1]  # number of columns\n",
+    "col_width = (col2_w - 10 ) / df.shape[1]  # number of columns\n",
     "row_height = 5\n",
     "pdf.set_y(right_y + 10)\n",
     "\n",
     "df.columns = [\"Metric\", \"Value\"]\n",
-    "pdf.set_x(right_x)\n",
+    "pdf.set_x(right_x-2.5)\n",
+    "right_x = pdf.get_x()\n",
     "# --------- Draw HEADER row ----------\n",
-    "pdf.set_font('Arial', 'B', 4)  # Bold font\n",
+    "pdf.set_font('Arial', 'B', 6)  # Bold font\n",
     "for col_name in df.columns:\n",
     "    pdf.cell(col_width, row_height, str(col_name), border='B', align='C')\n",
     "pdf.ln(row_height)\n",
     "pdf.set_x(right_x)\n",
     "\n",
     "# --------- Draw BODY rows ----------\n",
-    "pdf.set_font('Arial', '', 4)  # Back to normal font\n",
+    "pdf.set_font('Arial', '', 6)  # Back to normal font\n",
     "for i in range(len(df)):\n",
     "    for j in range(len(df.columns)):\n",
     "        value = str(df.iloc[i, j])\n",
@@ -291,7 +312,7 @@
     "df = financial_metrics_bendigo()\n",
     "\n",
     "# Adjusted total table width\n",
-    "table_width = col2_w - 15\n",
+    "table_width = col2_w - 10\n",
     "col_width = table_width / df.shape[1]\n",
     "\n",
     "# Starting X position with 5 padding on each side\n",
@@ -299,13 +320,13 @@
     "pdf.set_x(table_start_x)\n",
     "\n",
     "# --------- Draw HEADER row ----------\n",
-    "pdf.set_font('Arial', 'B', 4)\n",
+    "pdf.set_font('Arial', 'B', 6)\n",
     "for col_name in df.columns:\n",
     "    pdf.cell(col_width, row_height, str(col_name), border='B', align='C')\n",
     "pdf.ln(row_height)\n",
     "\n",
     "# --------- Draw BODY rows ----------\n",
-    "pdf.set_font('Arial', '', 4)\n",
+    "pdf.set_font('Arial', '', 6)\n",
     "for i in range(len(df)):\n",
     "    pdf.set_x(table_start_x)  # Reset to start of row each line\n",
     "    for j in range(len(df.columns)):\n",
@@ -325,7 +346,7 @@
     "\n",
     "# Group members\n",
     "group_members = [\n",
-    "    \"Alice Zhang - 45678912\",\n",
+    "    \"Hugh ODonnell - 4740073\",\n",
     "    \"Miles Mizutani - 43127890\",\n",
     "    \"Jason Lee - 43216789\",\n",
     "    \"Emily Tran - 42896543\"\n",
@@ -341,11 +362,13 @@
    "cell_type": "markdown",
    "id": "08b9f6ff",
    "metadata": {},
-   "source": []
+   "source": [
+    "Left column content"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 417,
    "id": "9182b7fe",
    "metadata": {},
    "outputs": [
@@ -355,7 +378,7 @@
        "''"
       ]
      },
-     "execution_count": 462,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 418,
    "id": "6e2a7ed0",
    "metadata": {},
    "outputs": [
